--- a/src/main/resources/com/fitness/fragment/customer/add_customer.fxml
+++ b/src/main/resources/com/fitness/fragment/customer/add_customer.fxml
@@ -10,6 +10,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.ColumnConstraints?>
 <?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
