changed position logic, one position has many employments and one employment has one position. One employee has many positions. one position has many employees.

--- a/src/main/resources/com/fitness/preload.fxml
+++ b/src/main/resources/com/fitness/preload.fxml
@@ -8,7 +8,7 @@
    <children>
       <ImageView fitHeight="400.0" fitWidth="600.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@assets/preload.jpg" />
+            <Image url="@assets/preload.png" />
          </image>
       </ImageView>
       <ProgressIndicator layoutX="449.0" layoutY="274.0" minHeight="-Infinity" minWidth="-Infinity" prefHeight="117.0" prefWidth="149.0" />
